@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2014-08-26 Doug
+	* Add photon systematics
+	
 2014-02-13 Steve
 	* Now using central SUSYTools method for sherpa WW radiative
 	  b quark fix: Sherpa_WW_veto
